--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,10 @@
 ; We fork some components by platform
 .*/*[.]android.js
 
+; Ignore mock files for now until I could rewrite it
+<PROJECT_ROOT>/__mock__/.*
+<PROJECT_ROOT>/__tests__/.*
+
 ; Ignore all node_modules
 <PROJECT_ROOT>/node_modules/.*
 <PROJECT_ROOT>/libdefs.js
@@ -33,6 +37,7 @@ node_modules/react-native/flow/
 node_modules/react-native/flow-github/
 
 [options]
+module.system.node.resolve_dirname=node_modules
 all=true
 emoji=true
 
