add auto jest test when any file is changed under app/infrastructures

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "flow focus-check",
       "eslint --fix",
       "git add"
-    ]
+    ],
+    "app/infrastructures/**": "jest __tests__/infrastructures"
   },
   "dependencies": {
     "core-js": "^2.5.7",
