--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "eslint --fix",
       "git add"
     ],
-    "app/infrastructures/**": "jest __tests__/infrastructures"
+    "app/modules/infrastructures/**": "jest __tests__/infrastructures"
   },
   "dependencies": {
     "core-js": "^2.5.7",
