--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ build/
 local.properties
 *.iml
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
 # node.js
 #
 node_modules/
