--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,3 +25,11 @@ allprojects {
         google()
     }
 }
+
+ext {
+    buildToolsVersion = "27.0.3"
+    minSdkVersion = 16
+    compileSdkVersion = 27
+    targetSdkVersion = 27
+    supportLibVersion = "27.1.0"
+}
