--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.57.7",
     "react-native-console-time-polyfill": "^1.0.0",
     "react-native-extended-stylesheet": "^0.10.0",
+    "react-native-gesture-handler": "^1.0.10",
     "react-navigation": "^3.0.7",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
