- redux integration - redux saga integration - navigation after saga - request reducer tests - take leading action with conditional payload

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
   "rules": {
     "react/prefer-stateless-function": "off",
     "react/jsx-filename-extension": "off",
-    "import/prefer-default-export": 1
+    "import/prefer-default-export": 1,
+    "react/destructuring-assignment": "off"
   },
   "globals": {
     "Generator": true,
