--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "16.6.1",
     "react-devtools": "^3.4.3",
     "react-native": "0.57.7",
+    "react-native-config": "^0.11.7",
     "react-native-console-time-polyfill": "^1.0.0",
     "react-native-extended-stylesheet": "^0.10.0",
     "react-native-gesture-handler": "^1.0.10",
