--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.0",
+    "firebase": "^6.2.0",
     "moment": "^2.22.2",
     "react": "16.6.1",
     "react-devtools": "^3.4.3",
@@ -47,7 +49,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^0.16.2",
+    "redux-saga": "^1.0.1",
     "reselect": "^4.0.0",
     "validator": "^10.9.0"
   },
@@ -58,7 +60,7 @@
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
