--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "parser": "babel-eslint",
-  "plugins": [
-    "react",
-    "react-native"
-  ],
+  "plugins": ["react", "react-native"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
@@ -24,7 +21,8 @@
     "react/prefer-stateless-function": "off",
     "react/jsx-filename-extension": "off",
     "import/prefer-default-export": 1,
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "react/sort-comp": "off"
   },
   "globals": {
     "Generator": true,
