--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
 
 # Android/IntelliJ
 #
@@ -43,6 +42,7 @@ yarn-error.log
 buck-out/
 \.buckd/
 *.keystore
+!debug.keystore
 
 # fastlane
 #
@@ -58,8 +58,8 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-# Pod
-ios/Pods
+# CocoaPods
+/ios/Pods/
 
 # app
 app/config/auth.js
