--- a/package.json
+++ b/package.json
@@ -3,18 +3,56 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
     "test": "jest --coverage",
+    "lint": "eslint .",
     "flow": "flow focus-check",
     "eslint": "eslint",
     "prettier": "prettier",
     "react-devtool": "react-devtools",
     "redux-devtool": "remotedev",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone X'",
     "log:android": "react-native log-android",
     "log:ios": "react-native log-ios",
     "fmt": "prettier --config .prettierrc.yml --write \"{!(node_modules),!(__mock__)/**/}*.{jsx,js,json,md,ts}\""
+  },
+  "dependencies": {
+    "@react-native-community/netinfo": "^4.4.0",
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "react": "16.9.0",
+    "react-devtools": "^4.2.0",
+    "react-native": "0.61.2",
+    "react-native-config": "^0.11.7",
+    "react-native-console-time-polyfill": "^1.2.1",
+    "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.2",
+    "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.1",
+    "reselect": "^4.0.0",
+    "validator": "^11.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/runtime": "^7.6.3",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "flow-bin": "^0.111.3",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "16.9.0"
   },
   "husky": {
     "hooks": {
@@ -32,53 +70,11 @@
       "git add"
     ]
   },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.0",
-    "firebase": "^6.2.0",
-    "moment": "^2.22.2",
-    "react": "16.6.1",
-    "react-devtools": "^3.4.3",
-    "react-native": "0.57.7",
-    "react-native-config": "^0.11.7",
-    "react-native-console-time-polyfill": "^1.0.0",
-    "react-native-extended-stylesheet": "^0.10.0",
-    "react-native-gesture-handler": "^1.0.10",
-    "react-navigation": "^3.0.7",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.1",
-    "reselect": "^4.0.0",
-    "validator": "^10.9.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-preset-react-native": "^4.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-react-native": "^3.5.0",
-    "flow-bin": "^0.87.0",
-    "husky": "^1.2.0",
-    "jest": "23.6.0",
-    "lint-staged": "^8.1.0",
-    "metro-react-native-babel-preset": "0.50.0",
-    "prettier": "^1.15.3",
-    "react-test-renderer": "16.6.1"
-  },
   "jest": {
     "preset": "react-native",
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|@?react-navigation)"
+    ],
     "collectCoverageFrom": [
       "app/redux/**/*.{js,jsx}",
       "!app/redux/**/*.action.{js,jsx}",
