--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,18 @@
 __mock__/*
+android/*
+ios/*
+__tests__/*
+docs/*
+env/*
+node_modules/*
+coverage/*
+appcenter-post-clone.sh
+.buckconfig
+.eslintignore
+.flowconfig
+.gitattributes
+.gitignore
+.nvmrc
+.prettierignore
+.watchmanconfig
+libdefs.js
